[project]
name = "langgraph-streaming-chatbot"
version = "0.1.0"
description = "LangGraph & FastAPI 기반 스트리밍 챗봇 서버"
authors = [
    {name = "hwantage", email = "hwantagexsw2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
]